<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">你好，测试页面!</string>
    <string name="app_name">车行助手</string>
    <string name="local_service_started">车行助手网络服务已启动</string>
    <string name="local_service_stopped">车行助手网络服务已停止</string>
    <string name="local_service_label">车行助手网络服务</string>
    <string name="permission_aceess_label">车行助手网络服务授权</string>
    <string name="permission_aceess_desc">车行助手网络服务授权详细说明</string>
    <string name="user_login">用户登录</string>
    <string name="password">密\u0020\u0020\u0020\u0020码：   </string>
    <string name="telematics">车行助手</string>
    <string name="telematics_system">车行助手</string>
    <string name="username">帐户名：   </string>
    <string name="semicolon">：   </string>
    <string name="username_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="username_password_error">用户名或密码错误，请重新输入！</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="remember_username">记住用户名</string>
    <string name="remember_password">记住密码</string>
    <string name="navigation_titleBar_text">车行助手</string>
    <string name="retry">重试</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="system_error">系统内部错误</string>
    <string name="progress_header">连接中</string>
    <string name="progress_body">正在连接服务器\u2026</string>
    <string name="warning">警告</string>
    <string name="vehicle_number">车牌号：   </string>
    <string name="current_location">当前位置：   </string>
    <string name="query_year">查询年份：   </string>
    <string name="violation_times">违章次数：   </string>
    <string name="time">时间：   </string>
    <string name="state">状态：   </string>
    <string name="address">地点：   </string>
    <string name="content">内容：   </string>
    <string name="summary">简单描述：   </string>
    <string name="detail">详细内容：   </string>
    <string name="event">事件：   </string>
    <string name="is_dealed">已处理</string>
    <string name="not_dealed">未处理 </string>
    <string name="month">月份</string>
    <string name="violation_query">违章查询</string>
    <string name="violation_detail">违章详情</string>
    <string name="violation_address">违章地点：   </string>
    <string name="violation_content">违章内容：   </string>
    <string name="violation_score">违章积分：   </string>
    <string name="fine_amount">罚款金额：   </string>
    <string name="violation_state">违章状态：   </string>
    <string name="violation_reason">违章依据：   </string>
    <string name="punish">处罚：   </string>
    <string name="deductio">扣分：   </string>
    <string name="fine">罚款：   </string>
    <string name="score">分</string>
    <string name="yuan">元</string>
    <string name="vehicle_license">车牌：   </string>
    <string name="last">上一篇</string>
    <string name="next">下一篇</string>
    <string name="goForwardPage">上一页</string>
    <string name="goNextPage">下一页</string>
    <string name="times">次</string>
    <string name="logout">退出登陆</string>
    <string name="weather_title">天气资讯</string>
    <string name="state_title">远程诊断</string>
    <string name="state_detail_title">诊断详情</string>
    <!-- ℃ -->
    <string name="weather_temperature_format">%1$s℃</string>
    <string name="weather_temperature_range_format">%1$s/%2$s℃</string>
    <string name="weather_humidness_format">湿度：   %1$s</string>
    <string name="weather_updateTime_format">更新时间  %1$s</string>
    <string name="weather_wash_format">洗车：   %1$s </string>
    <string name="weather_change">转</string>
    <string name="weather_sunny">晴</string>
    <string name="weather_cloudy">多云</string>
    <string name="weather_nosunshine">阴</string>
    <string name="weather_rain">雨</string>
    <string name="weather_thunder">雷雨</string>
    <string name="wash_state_high">适宜</string>
    <string name="wash_state_mid">较适宜</string>
    <string name="wash_state_low">不适宜</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="image_description">图片</string>
    <string name="show_vin">车架号：   %1$s</string>
    <string name="show_license">车牌号：   %1$s</string>
    <string name="fault">故障：   </string>
    <string name="show_detail">查看详情</string>
    <string name="show_fault_level">故障等级：   %1$s</string>
    <string name="show_fault_id">故障号：   %1$s</string>
    <string name="show_fault_position_id">故障位置号：   %1$s</string>
    <string name="show_fault_position_description">故障位置描述：   %1$s</string>
    <string name="show_fault_description">故障描述：   %1$s</string>
    <string name="show_index">第%1$s页/共%2$s页</string>
    <string name="show_date">%1$s年%2$s月</string>
    <string name="show_maintain_date">时间：   %1$s</string>
    <string name="show_maintain_mile">保养里程：   %1$skm</string>
    <string name="show_maintain_content">保养内容：   %1$s</string>
    <string name="remote_control">远程控制</string>
    <string name="road_rescue">道路救援</string>
    <string name="road_rescue_history_query">道路救援历史查询</string>
    <string name="road_rescue_detail">历史详情查询</string>
    <string name="rescuer_name">救援人姓名：   </string>
    <string name="dynamic">实时动态：   </string>
    <string name="call">一键呼叫</string>
    <string name="history_record">查看历史记录</string>
    <string name="user_id">用户ID：   </string>
    <string name="choose">筛选</string>
    <string name="to">到</string>
    <string name="request_time">请求时间：   </string>
    <string name="request_rescue_time">救援时间：   </string>
    <string name="arrive_time">到达时间：   </string>
    <string name="rescue_address">救助地点：   </string>
    <string name="longitude">经度：   </string>
    <string name="latitude">纬度：   </string>
    <string name="valuation">评价：   </string>
    <string name="current_score">当前积分：   </string>
    <string name="goods_list">兑换商品列表</string>
    <string name="goods_score">积分</string>
    <string name="exchange">兑换</string>
    <string name="start_date">起始</string>
    <string name="deadline">截止</string>
    <string name="member_score">会员积分服务</string>
    <string name="filling_station_title">加油站查询</string>
    <string name="gong_shou_suo_dao">共搜索到</string>
    <string name="count_str">家</string>
    <string name="friend_count_str">个好友</string>
    <string name="gasStation">加油站</string>
    <string name="show_list">显示列表</string>
    <string name="show_map">显示地图</string>
    <string name="remote_start">远程启动</string>
    <string name="whistle_blink">鸣笛闪烁</string>
    <string name="vehicle_lock">车门上锁</string>
    <string name="vehicle_unlock">车门解锁</string>
    <string name="is_sending_command">正在发送命令\u2026</string>
    <string name="cancel_sending">取消发送</string>
    <string name="poi_parking_str">停车场</string>
    <string name="poi_gasstation_str">加油站</string>
    <string name="poi_search_str">POI 查询</string>
    <string name="none">无</string>
    <string name="server_respone_null">服务器异常</string>
    <string name="score_number">编号：   </string>
    <string name="unknow">未知地点</string>
    <string name="is_exit_system">是否退出应用程序？</string>

    <!-- **************************fan leilei write************************* -->
    <string name="datePikerFormat">%1$s-%2$s-%3$s</string>
    <string name="testLongitude">116.455153</string>
    <string name="testLatitude">39.915018</string>
    <string name="province">省</string>
    <string name="city">市</string>
    <string name="testVin">LDCB13R48B2065671</string>
    <string name="testLicense1">京NEB810</string>
    <string name="maintain_hisory_title">维修保养历史查询</string>
    <string name="maintain_order_title">维修保养预约查询</string>
    <string name="detail_title">详情</string>
    <string name="maintain_time">保养时间：   %1$s</string>
    <string name="maintain_mile">保养里程：   %1$s</string>
    <string name="maintain_content">保养内容：   %1$s</string>
    <string name="fuel_title">油量检测</string>
    <string name="timeout">请求超时</string>
    <string name="asyncError">异步请求失败</string>
    <string name="testLocation">北京</string>
    <string name="fuel_remaining">可续航公里数：   %1$s km</string>
    <string name="fuel_consume">百公里油耗：   %1$s L</string>
    <string name="error_account_deleted">该账号已被删除</string>
    <string name="error_no_connet_of_3rd_service">该服务暂时无法使用，请稍后重试</string>
    <string name="error_msg_of_3rd_service">该服务暂时无法使用，请稍后重试</string>
    <string name="error_async_return_fault">该服务暂时无法使用，请稍后重试</string>
    <string name="error_no_hu_info">无法获取车机信息</string>
    <string name="error_no_hu_connected">无法与车机建立网络连接</string>
    <string name="error_unknow">服务出现了未知异常</string>
    <string name="error_empty_payload">后台空数据错误，请稍后重试</string>
    <string name="error_unauthorized">用户未授权</string>
    <string name="all_shown">已经全部显示</string>
    <string name="suggestion">建议：   </string>
    <!-- **************************fan end write************************* -->

    <string name="default_violation_times">0</string>
    <string name="load_more">正在加载更多\u2026</string>
    <string name="remote_control_success">远程控制成功</string>
    <string name="remote_control_failed">远程控制失败</string>

    <!-- poi detail -->
    <string name="gas_address">地点：   </string>
    <string name="gas_distance">距离：   </string>
    <string name="gas_price">价格：   </string>
    <string name="park_saturation">饱和度：   </string>
    <string name="gas_discountdesc">优惠：   </string>
    <string name="friend">车友圈</string>
    <string name="track">行驶轨迹</string>
    <string name="location">车辆追踪</string>
    <string name="friend_nickname">昵称：   </string>
    <string name="friend_note">签名：   </string>
    <string name="friend_address">地址：   </string>
    <string name="get_route">获取路线</string>
    <string name="gas_direction_btn">导航到此</string>
    <string name="get_route_fail">未找到合适的路径</string>
    <string name="wait">发送请求</string>
    <string name="calculate">计算路径</string>
    <string name="locate_fail">定位失败，请检查GPS或网络设置</string>
    <string name="gps_msg">请确认GPS已打开，并在GPS覆盖范围内！</string>
    <string name="gps_ok">是</string>
    <string name="gps_cancel">否</string>
    <string name="gps_progress_msg">正在获取当前位置</string>
    <string name="locate_success">定位成功</string>
    <string name="locate_timeout">定位超时</string>
    <string name="network_fail">连接失败，请检查网络</string>
    <string name="gps_locate_fail">暂时无法获取当前位置，请稍后重试</string>

</resources>