<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/home_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="45dp" >

        <LinearLayout
            android:id="@+id/show_list_map_switch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >

            <Button
                android:id="@+id/show_list_map_switch_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/poi_show_map_list_selector"
                android:text="@string/show_map"
                android:textColor="#FFF"
                android:textSize="16dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alert_search_count_str"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/show_list_map_switch"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gong_shou_suo_dao" />

            <TextView
                android:id="@+id/poi_result_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:text="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_str" />

            <TextView
                android:id="@+id/poi_result_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gasStation" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/violation_line" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/alert_search_count_str"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" 
            android:paddingBottom="5dp">

            <ListView
                android:id="@+id/poi_search_listview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <com.amap.mapapi.map.MapView
                android:id="@+id/poi_mapView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:visibility="gone" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <include layout="@layout/ui_title_bar_layout" />
    </LinearLayout>

</FrameLayout>