<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/home_bg"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/friend_item_nickname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/poi_item_top"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="中山南路停车场"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/poi_item_middle"
            android:orientation="vertical"
            android:paddingLeft="10dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friend_note"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/friend_item_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp" 
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friend_address"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/friend_item_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp" />
            </LinearLayout>

            <Button
                android:id="@+id/friend_get_direction_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/gas_direction_btn"
                android:visibility="gone" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1" >

            <com.amap.mapapi.map.MapView
                android:id="@+id/gas_mapView_id"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:clickable="true" >
            </com.amap.mapapi.map.MapView>

            <ImageView
                android:id="@+id/friend_map_direction_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_description"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:src="@drawable/map_direction_image" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <include layout="@layout/ui_title_bar_layout" />
    </LinearLayout>

</FrameLayout>